# mypython

./: README.md  pyproject.toml  setup.py
mypython/: __main__.py  mypython.py  mypython3.py
